<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Viet Kitchen Admin</string>
    <string name="label_save">save</string>
    <string name="label_preview">preview</string>
    <string name="hint_recipe_title">Enter title</string>
    <string name="hint_short_intro">Short introduction</string>
    <string name="hint_notes">Notes</string>
    <string name="hint_ingredients">Ingredients</string>
    <string name="hint_spices">Spices</string>
    <string name="hint_cooking_method">cooking method</string>
    <string name="hint_season">season</string>
    <string name="hint_benefit">benefit</string>
    <string name="hint_preparation">Preparation</string>
    <string name="hint_process">Process</string>
    <string name="hint_tags">Tags</string>
    <string name="hint_special_day">special days</string>
    <string name="hint_region">region</string>
    <string name="hint_search">search recipes</string>

    <string name="region_vietnam">vietnam</string>
    <string name="label_categories">categories</string>

    <string name="error_msg_thumb_image_null">thumb image must be set</string>
    <string name="error_msg_title_empty">title must be not empty</string>
    <string name="error_msg_ingredient_empty">ingredient must be not empty</string>
    <string name="error_msg_tags_empty">tag must be not empty</string>
    <string name="error_msg_categories_un_selected">must check at least 1 category</string>
    <string name="error_msg_process_step_empty">step to process must be not empty</string>
    <string name="error_msg">Opps some things went wrong!</string>
</resources>